fix: Fix header jumping between pages

--- a/frontend/src/components/HeaderSimple/HeaderSimple.module.css
+++ b/frontend/src/components/HeaderSimple/HeaderSimple.module.css
@@ -5,7 +5,7 @@
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 100;
 }
 
